--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,18 @@
 /* Add CSS Styling */
+.odd{
+    background-color: pink;
+    font-family: Verdana,"DejaVu Sans",sans-serif;
+}
+.medium{
+    font-size: 24px;
+}
+#second {
+    color: blue;
+    font-size: 36px;
+
+}
+#forth{
+    background-color: lightgreen;
+    font-weight: bold;
+}
+
