--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  /*justify-content: space-between;*/
+  
 }
 
 img {
@@ -16,6 +20,8 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  
+  padding: 8px;
 }
 
 input {
@@ -23,4 +29,46 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+li{
+  list-style-type: none;
+}
+
+a{
+  text-decoration: none;
+  color: gray;
+}
+
+.header,.footer,.left-links,.right-links,.content{
+  display: flex;
+  padding: 10px;
+  gap: 10px;
+  
+}
+
+.content{
+  
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  flex: 1;
+  
+  
+}
+
+.header,.footer{
+  justify-content: space-between;
+  
+  
+}
+
+.footer{
+  background-color: bisque;
+  
+}
+
+.buttons button{
+  
+  
 }
